bugfix : correct the menu icon alignment

--- a/dg/components/molecules/header/index.scss
+++ b/dg/components/molecules/header/index.scss
@@ -29,6 +29,5 @@
 
         color: $color-axa-blue;
         width: $spacing-4;
-        height: $spacing-4+$spacing-2; // width + padding-left
     }
 }
